feat: create endpoint to get logged in user data
